--- a/app/styles/ember-theater/variables/schemes/structural/_block.scss
+++ b/app/styles/ember-theater/variables/schemes/structural/_block.scss
@@ -12,15 +12,18 @@ $et-choice-block-border-width: $et-choice-border-width !default;
 
 $et-choice-header-block-font-size: $et-choice-header-font-size !default;
 $et-choice-header-block-margin-bottom: $et-choice-header-margin-bottom !default;
+$et-choice-header-block-line-height: $et-default-line-height !default;
 
 $et-choice-option-block-font-size: $et-choice-option-font-size !default;
 $et-choice-option-block-margin-bottom: $et-choice-option-margin-bottom !default;
 $et-choice-option-block-width: $et-choice-option-width !default;
 $et-choice-option-block-border-width: $et-choice-border-width !default;
+$et-choice-option-block-line-height: $et-default-line-height !default;
 
 // text
 $et-text-block-padding-base: $et-text-padding-base !default;
-$et-text-block-padding: $et-text-block-padding-base $et-text-block-padding-base * 1.61 !default;
+$et-text-block-padding-ends: $et-text-block-padding-base !default;
+$et-text-block-padding-sides: $et-text-block-padding-base !default;
 $et-text-block-margin: 0 !default;
 $et-text-block-border-width: $et-text-border-width !default;
 $et-text-block-font-size: $et-text-font-size !default;
@@ -31,8 +34,10 @@ $et-text-block-line-height: $et-default-line-height !default;
 $et-text-block-height: ($et-text-block-line-height * 3) +
                      ($et-text-block-border-width * 2) +
                      ($et-text-block-padding-base * 2) !default;
+$et-text-block-height-responive-small: $et-text-block-height + $et-text-block-line-height !default;
 
 $et-text-caption-block-font-size: $et-text-caption-font-size !default;
 $et-text-caption-block-top: $et-text-caption-block-font-size * -1.5 !default;
 $et-text-caption-block-left: $et-text-block-padding-base !default;
-$et-text-caption-block-padding: 0 $et-text-block-padding-base !default;
+$et-text-caption-block-padding-ends: 0 !default
+$et-text-caption-block-padding-sides: $et-text-block-padding-base !default;
