--- a/app/styles/ember-theater/variables/schemes/structural/_full.scss
+++ b/app/styles/ember-theater/variables/schemes/structural/_full.scss
@@ -1,7 +1,7 @@
 $et-full-padding: 19%;
 
 // choice
-$et-choice-full-padding: $et-choice-padding $et-full-padding !default;
+$et-choice-full-padding: $et-choice-padding !default;
 $et-choice-full-border-width: $et-choice-border-width !default;
 
 $et-choice-header-full-font-size: $et-choice-header-font-size !default;
@@ -13,7 +13,7 @@ $et-choice-option-full-width: $et-choice-option-width !default;
 $et-choice-option-full-border-width: $et-choice-border-width !default;
 
 // text
-$et-text-full-padding: $et-text-padding-base $et-full-padding !default;
+$et-text-full-padding: $et-text-padding-base !default;
 $et-text-full-font-size: $et-text-font-size !default;
 $et-text-caption-full-font-size: $et-text-caption-font-size !default;
 $et-text-full-border-width: $et-text-border-width !default;
