--- a/app/styles/ember-theater/schemes/structural/_full.scss
+++ b/app/styles/ember-theater/schemes/structural/_full.scss
@@ -3,49 +3,93 @@ $et-text-included: false !default;
 
 @if ($et-choice-included == true) {
   .et-choice.et-full {
-    padding: $et-choice-full-padding;
-    border-width: $et-choice-full-border-width;
-
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
-
-    .et-choice-header {
-      font-size: $et-choice-header-full-font-size;
-      margin-bottom: $et-choice-header-full-margin-bottom;
-    }
-
-    .et-choice-option {
-      font-size: $et-choice-option-full-font-size;
-    }
+    border-width: $et-choice-full-border-width;
 
     .et-choice-option, .et-choice-input {
-      width: $et-choice-option-full-width;
-      margin-bottom: $et-choice-option-full-margin-bottom;
       border-width: $et-choice-option-full-border-width;
+    }
+  }
+
+  @media (min-width: map-get($breakpoints, small)) {
+    .et-choice.et-full {
+      padding: $et-choice-full-padding * map-get($breakpoint_factors, small);
+
+      .et-choice-header {
+        font-size: $et-choice-header-full-font-size * map-get($breakpoint_factors, small);
+        margin-bottom: $et-choice-header-full-margin-bottom * map-get($breakpoint_factors, small);
+      }
+
+      .et-choice-option {
+        font-size: $et-choice-option-full-font-size * map-get($breakpoint_factors, small);
+      }
+
+      .et-choice-option, .et-choice-input {
+        width: $et-choice-option-full-width * 0.95;
+        margin: $et-choice-option-full-margin-bottom auto;
+      }
+    }
+  }
+
+  @media (min-width: map-get($breakpoints, medium)) {
+    .et-choice.et-full {
+      padding: $et-choice-full-padding;
+
+      .et-choice-header {
+        font-size: $et-choice-header-full-font-size;
+        margin-bottom: $et-choice-header-full-margin-bottom;
+      }
+
+      .et-choice-option {
+        font-size: $et-choice-option-full-font-size;
+      }
+
+      .et-choice-option, .et-choice-input {
+        width: $et-choice-option-full-width;
+        margin-bottom: $et-choice-option-full-margin-bottom;
+      }
     }
   }
 }
 
 @if ($et-text-included == true) {
   .et-text.et-full {
-    font-size: $et-text-full-font-size;
-    padding: $et-text-full-padding;
-    border-width: $et-text-full-border-width;
-
     left: 0;
     right: 0;
     bottom: 0;
     top: 0;
     margin: 0;
 
-    .et-text-caption {
-      font-size: $et-text-caption-full-font-size;
-      border-width: $et-text-full-border-width;
+    border-width: $et-text-full-border-width;
 
+    .et-text-caption {
       display: block;
       border: 0;
+    }
+  }
+
+  @media (min-width: map-get($breakpoints, small)) {
+    .et-text.et-full {
+      font-size: $et-text-full-font-size * map-get($breakpoint_factors, small);
+      padding: $et-text-full-padding * map-get($breakpoint_factors, small);
+
+      .et-text-caption {
+        font-size: $et-text-caption-full-font-size * map-get($breakpoint_factors, small);
+      }
+    }
+  }
+
+  @media (min-width: map-get($breakpoints, medium)) {
+    .et-text.et-full {
+      font-size: $et-text-full-font-size;
+      padding: $et-text-full-padding;
+
+      .et-text-caption {
+        font-size: $et-text-caption-full-font-size;
+      }
     }
   }
 }
