--- a/app/styles/ember-theater/schemes/structural/_wide.scss
+++ b/app/styles/ember-theater/schemes/structural/_wide.scss
@@ -3,51 +3,102 @@ $et-text-included: false !default;
 
 @if ($et-choice-included == true) {
   .et-choice.et-wide {
-    padding: $et-choice-full-padding;
-    border-width: $et-choice-full-border-width;
-
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
-
-    .et-choice-header {
-      font-size: $et-choice-header-full-font-size;
-      margin-bottom: $et-choice-header-full-margin-bottom;
-    }
-
-    .et-choice-option {
-      font-size: $et-choice-option-full-font-size;
-    }
+    border-width: $et-choice-full-border-width;
 
     .et-choice-option, .et-choice-input {
-      width: $et-choice-option-full-width;
-      margin-bottom: $et-choice-option-full-margin-bottom;
       border-width: $et-choice-option-full-border-width;
+    }
+  }
+
+  @media (min-width: map-get($breakpoints, small)) {
+    .et-choice.et-wide {
+      padding: $et-choice-full-padding * map-get($breakpoint_factors, small);
+
+      .et-choice-header {
+        font-size: $et-choice-header-full-font-size * map-get($breakpoint_factors, small);
+        margin-bottom: $et-choice-header-full-margin-bottom * map-get($breakpoint_factors, small);
+      }
+
+      .et-choice-option {
+        font-size: $et-choice-option-full-font-size * map-get($breakpoint_factors, small);
+      }
+
+      .et-choice-option, .et-choice-input {
+        width: $et-choice-option-full-width * 0.95;
+        margin: $et-choice-option-full-margin-bottom auto;
+      }
+    }
+  }
+
+  @media (min-width: map-get($breakpoints, medium)) {
+    .et-choice.et-wide {
+      padding: $et-choice-full-padding;
+
+      .et-choice-header {
+        font-size: $et-choice-header-full-font-size;
+        margin-bottom: $et-choice-header-full-margin-bottom;
+      }
+
+      .et-choice-option {
+        font-size: $et-choice-option-full-font-size;
+      }
+
+      .et-choice-option, .et-choice-input {
+        width: $et-choice-option-full-width;
+        margin-bottom: $et-choice-option-full-margin-bottom;
+      }
     }
   }
 }
 
 @if ($et-text-included == true) {
   .et-text.et-wide {
-    bottom: $et-text-wide-bottom;
-    height: $et-text-wide-height;
-    line-height: $et-text-wide-line-height;
-    font-size: $et-text-wide-font-size;
-    padding: $et-text-wide-padding;
-    margin: $et-text-wide-margin;
-    border-width: $et-text-wide-border-width;
-
     left: 0;
     right: 0;
+    border-width: $et-text-wide-border-width;
 
     .et-text-caption {
-      top: $et-text-caption-wide-top;
-      left: $et-text-caption-wide-left;
-      padding: $et-text-caption-wide-padding;
-      font-size: $et-text-caption-wide-font-size;
-
       position: absolute;
+    }
+  }
+
+  @media (min-width: map-get($breakpoints, small)) {
+    .et-text.et-wide {
+      bottom: $et-text-wide-bottom * map-get($breakpoint_factors, small);
+      height: $et-text-wide-height-responsive-small * map-get($breakpoint_factors, small);
+      line-height: $et-text-wide-line-height * map-get($breakpoint_factors, small);
+      font-size: $et-text-wide-font-size * map-get($breakpoint_factors, small);
+      padding: $et-text-wide-padding * map-get($breakpoint_factors, small);
+      margin: $et-text-wide-margin * map-get($breakpoint_factors, small);
+
+      .et-text-caption {
+        top: $et-text-caption-wide-top * map-get($breakpoint_factors, small);
+        left: $et-text-caption-wide-left * map-get($breakpoint_factors, small);
+        padding: $et-text-caption-wide-padding-ends * map-get($breakpoint_factors, small) $et-text-caption-wide-padding-sides * map-get($breakpoint_factors, small);
+        font-size: $et-text-caption-wide-font-size * map-get($breakpoint_factors, small);
+      }
+    }
+  }
+
+  @media (min-width: map-get($breakpoints, medium)) {
+    .et-text.et-wide {
+      bottom: $et-text-wide-bottom;
+      height: $et-text-wide-height;
+      line-height: $et-text-wide-line-height;
+      font-size: $et-text-wide-font-size;
+      padding: $et-text-wide-padding;
+      margin: $et-text-wide-margin;
+
+      .et-text-caption {
+        top: $et-text-caption-wide-top;
+        left: $et-text-caption-wide-left;
+        padding: $et-text-caption-wide-padding-ends $et-text-caption-wide-padding-sides;
+        font-size: $et-text-caption-wide-font-size;
+      }
     }
   }
 }
