--- a/app/styles/ember-theater/schemes/structural/_wide.scss
+++ b/app/styles/ember-theater/schemes/structural/_wide.scss
@@ -77,9 +77,16 @@ $et-text-included: false !default;
 
       .et-text-caption {
         top: $et-text-caption-wide-top * map-get($breakpoint_factors, small);
-        left: $et-text-caption-wide-left * map-get($breakpoint_factors, small);
         padding: $et-text-caption-wide-padding-ends * map-get($breakpoint_factors, small) $et-text-caption-wide-padding-sides * map-get($breakpoint_factors, small);
         font-size: $et-text-caption-wide-font-size * map-get($breakpoint_factors, small);
+
+        &.left {
+          left: $et-text-caption-wide-side * map-get($breakpoint_factors, small);
+        }
+
+        &.right {
+          right: $et-text-caption-wide-side * map-get($breakpoint_factors, small);
+        }
       }
     }
   }
@@ -95,9 +102,16 @@ $et-text-included: false !default;
 
       .et-text-caption {
         top: $et-text-caption-wide-top;
-        left: $et-text-caption-wide-left;
         padding: $et-text-caption-wide-padding-ends $et-text-caption-wide-padding-sides;
         font-size: $et-text-caption-wide-font-size;
+
+        &.left {
+          left: $et-text-caption-wide-side;
+        }
+
+        &.right {
+          right: $et-text-caption-wide-side;
+        }
       }
     }
   }
