--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div class="theater-container">
-  {{#ember-theater config=config fixtures=fixtures isFocused=true as |theater|}}
+  {{#ember-theater config=config fixtures=fixtures isFocused=true theaterId="theater1" as |theater|}}
     {{#if theater.isLoaded}}
       {{theater.director initialSceneId=1}}
       {{#theater.menuBar as |menuBar|}}
@@ -16,6 +16,6 @@
 </div>
 <div class="theater-container">
   {{#ember-theater fixtures=fixtures theaterId="theater2" as |theater|}}
-    {{theater.director initialSceneId=2}}
+    {{theater.director initialSceneId=1}}
   {{/ember-theater}}
 </div>
