--- a/app/styles/ember-theater/schemes/structural/_block.scss
+++ b/app/styles/ember-theater/schemes/structural/_block.scss
@@ -90,11 +90,11 @@ $et-text-included: false !default;
         font-size: $et-text-caption-block-font-size * map-get($breakpoint_factors, small);
         border-width: $et-text-block-border-width * map-get($breakpoint_factors, small);
 
-        &.left {
+        &.et-left {
           left: $et-text-caption-block-side * map-get($breakpoint_factors, small);
         }
 
-        &.right {
+        &.et-right {
           right: $et-text-caption-block-side * map-get($breakpoint_factors, small);
         }
       }
@@ -119,11 +119,11 @@ $et-text-included: false !default;
         font-size: $et-text-caption-block-font-size;
         border-width: $et-text-block-border-width;
 
-        &.left {
+        &.et-left {
           left: $et-text-caption-block-side;
         }
 
-        &.right {
+        &.et-right {
           right: $et-text-caption-block-side;
         }
       }
