--- a/app/styles/ember-theater/variables/base/_borders.scss
+++ b/app/styles/ember-theater/variables/base/_borders.scss
@@ -1,3 +1,4 @@
 $et-default-border-style: solid !default;
 $et-default-border-radius: 7px !default;
 $et-default-border-width: 3px !default;
+$et-default-border-radius: 10px !default;
