--- a/app/styles/ember-theater/variables/schemes/structural/_wide.scss
+++ b/app/styles/ember-theater/variables/schemes/structural/_wide.scss
@@ -10,9 +10,11 @@ $et-text-wide-height: ($et-text-wide-line-height * 3) +
                      ($et-text-wide-border-width * 2) +
                      ($et-text-wide-padding-base * 2) !default;
 $et-text-wide-height-responsive-small: $et-text-wide-height + $et-text-wide-line-height !default;
+$et-text-wide-border-radius: $et-default-border-radius !default;
 
 $et-text-caption-wide-font-size: $et-text-caption-font-size !default;
 $et-text-caption-wide-top: $et-text-caption-wide-font-size * -1.5 !default;
 $et-text-caption-wide-side: $et-text-wide-padding-base !default;
 $et-text-caption-wide-padding-ends: 0 !default;
 $et-text-caption-wide-padding-sides: $et-text-wide-padding-base !default;
+$et-text-caption-wide-border-radius: $et-text-wide-border-radius * 0.7 !default;
