--- a/app/styles/ember-theater/variables/schemes/structural/_block.scss
+++ b/app/styles/ember-theater/variables/schemes/structural/_block.scss
@@ -9,6 +9,7 @@ $et-choice-block-right: (100 - $et-choice-block-width) / 2 !default;
 $et-choice-block-left: (100 - $et-choice-block-width) / 2 !default;
 $et-choice-block-padding: $et-choice-padding !default;
 $et-choice-block-border-width: $et-choice-border-width !default;
+$et-choice-block-border-radius: $et-default-border-radius !default;
 
 $et-choice-header-block-font-size: $et-choice-header-font-size !default;
 $et-choice-header-block-margin-bottom: $et-choice-header-margin-bottom !default;
@@ -35,9 +36,11 @@ $et-text-block-height: ($et-text-block-line-height * 3) +
                      ($et-text-block-border-width * 2) +
                      ($et-text-block-padding-base * 2) !default;
 $et-text-block-height-responive-small: $et-text-block-height + $et-text-block-line-height !default;
+$et-text-block-border-radius: $et-default-border-radius !default;
 
 $et-text-caption-block-font-size: $et-text-caption-font-size !default;
 $et-text-caption-block-top: $et-text-caption-block-font-size * -1.5 !default;
 $et-text-caption-block-side: $et-text-block-padding-base !default;
 $et-text-caption-block-padding-ends: 0 !default
 $et-text-caption-block-padding-sides: $et-text-block-padding-base !default;
+$et-text-caption-block-border-radius: $et-text-block-border-radius * 0.7 !default;
