--- a/app/styles/ember-theater/variables/schemes/structural/_full.scss
+++ b/app/styles/ember-theater/variables/schemes/structural/_full.scss
@@ -3,6 +3,7 @@ $et-full-padding: 19%;
 // choice
 $et-choice-full-padding: $et-choice-padding !default;
 $et-choice-full-border-width: $et-choice-border-width !default;
+$et-choice-full-border-radius: $et-default-border-radius !default;
 
 $et-choice-header-full-font-size: $et-choice-header-font-size !default;
 $et-choice-header-full-margin-bottom: $et-choice-header-margin-bottom !default;
@@ -17,3 +18,4 @@ $et-text-full-padding: $et-text-padding-base !default;
 $et-text-full-font-size: $et-text-font-size !default;
 $et-text-caption-full-font-size: $et-text-caption-font-size !default;
 $et-text-full-border-width: $et-text-border-width !default;
+$et-text-full-border-radius: $et-default-border-radius !default;
