multiple position arguments

--- a/app/styles/ember-theater/variables/_ember-theater.scss
+++ b/app/styles/ember-theater/variables/_ember-theater.scss
@@ -2,6 +2,7 @@ $et-blank-screen-background-color: #121212 !default;
 
 $et-semi-transparency: 0.95;
 $et-default-transition-speed: 500ms;
+$et-director-perspective: 30vh;
 
 @import "responsive";
 @import "base";
