set namePosition instead of textClassNames

--- a/app/styles/ember-theater/variables/schemes/structural/_block.scss
+++ b/app/styles/ember-theater/variables/schemes/structural/_block.scss
@@ -42,5 +42,5 @@ $et-text-caption-block-font-size: $et-text-caption-font-size !default;
 $et-text-caption-block-top: $et-text-caption-block-font-size * -1.5 !default;
 $et-text-caption-block-side: $et-text-block-padding-base !default;
 $et-text-caption-block-padding-ends: 0 !default
-$et-text-caption-block-padding-sides: $et-text-block-padding-base !default;
+$et-text-caption-block-padding-sides: $et-text-block-padding-base * 0.5 !default;
 $et-text-caption-block-border-radius: $et-text-block-border-radius * 0.7 !default;
