use preloaded assets

--- a/app/styles/ember-theater/components/ember-theater/director/_backdrop.scss
+++ b/app/styles/ember-theater/components/ember-theater/director/_backdrop.scss
@@ -1,11 +1,14 @@
-.et-backdrop {
-  @extend .et-full-screen;
-
+.et-backdrop-container, .et-backdrop {
   height: 100%;
   width: 100%;
+}
 
-  background-position: center;
-  background-size: cover;
+.et-backdrop-container {
+  display: flex;
+}
+
+.et-backdrop {
+  object-fit: cover;
 
   color: transparent;
 }
