--- a/tests/dummy/app/templates/test-scenarios/directions/character.hbs
+++ b/tests/dummy/app/templates/test-scenarios/directions/character.hbs
@@ -1,3 +1,3 @@
 {{#ember-theater theaterId="character-direction" fixtures=fixtures config=config isFocused=true as |theater|}}
-  {{ember-theater/director theaterId=theater.theaterId initialSceneId="test-scenarios/directions/character"}}
+  {{ember-theater/director theaterId=theater.theaterId initialScene="test-scenarios/directions/character"}}
 {{/ember-theater}}
