--- a/tests/dummy/app/templates/test-scenarios/directions/backdrop.hbs
+++ b/tests/dummy/app/templates/test-scenarios/directions/backdrop.hbs
@@ -1,3 +1,3 @@
 {{#ember-theater theaterId="backdrop-direction" fixtures=fixtures config=config isFocused=true as |theater|}}
-  {{ember-theater/director theaterId=theater.theaterId initialSceneId="test-scenarios/directions/backdrop"}}
+  {{ember-theater/director theaterId=theater.theaterId initialScene="test-scenarios/directions/backdrop"}}
 {{/ember-theater}}
