roll Expression into Character

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -16,6 +16,6 @@
 </div>
 <div class="theater-container">
   {{#ember-theater theaterId="theater2" fixtures=fixtures as |theater|}}
-    {{ember-theater/director theaterId=theater.theaterId initialScene=(action "actionScene")}}
+    {{ember-theater/director theaterId=theater.theaterId initialScene="demo"}}
   {{/ember-theater}}
 </div>
