give transitions the option to be unblocking

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,4 +1,4 @@
-<div class="theater-container">
+{{!-- <div class="theater-container">
   {{#ember-theater theaterId="theater1" config=config fixtures=fixtures isFocused=true as |theater|}}
     {{#if theater.isLoaded}}
       {{ember-theater/director theaterId=theater.theaterId initialScene="demo"}}
@@ -13,7 +13,7 @@
       {{ember-theater/curtain theaterId=theater.theaterId filesToPreload="backdrops:src expressions:src" completePreload=theater.completePreload}}
     {{/if}}
   {{/ember-theater}}
-</div>
+</div> --}}
 <div class="theater-container">
   {{#ember-theater theaterId="theater2" fixtures=fixtures as |theater|}}
     {{ember-theater/director theaterId=theater.theaterId initialScene="demo"}}
