decouple scene record

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -10,7 +10,7 @@
         {{ember-theater/menu-bar/resize theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
       {{/ember-theater/menu-bar}}
     {{else}}
-      {{ember-theater/curtain theaterId=theater.theaterId filesToPreload="backdrops:src expressions:src sounds:src" completePreload=theater.completePreload}}
+      {{ember-theater/curtain theaterId=theater.theaterId filesToPreload="backdrops:src" completePreload=theater.completePreload}}
     {{/if}}
   {{/ember-theater}}
 </div>
