--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,4 +1,4 @@
-<div class="theater-container">
+{{!-- <div class="theater-container">
   {{#ember-theater theaterId="theater1" config=config fixtures=fixtures isFocused=true as |theater|}}
     {{#if theater.isLoaded}}
       {{ember-theater/director theaterId=theater.theaterId initialScene="demo"}}
@@ -13,9 +13,16 @@
       {{ember-theater/curtain theaterId=theater.theaterId filesToPreload="backdrops:src" completePreload=theater.completePreload}}
     {{/if}}
   {{/ember-theater}}
-</div>
-{{!-- <div class="theater-container">
+</div> --}}
+<div class="theater-container">
   {{#ember-theater theaterId="theater2" fixtures=fixtures isFocused=true as |theater|}}
     {{ember-theater/director theaterId=theater.theaterId initialScene="demo"}}
+    {{#ember-theater/menu-bar theaterId=theater.theaterId as |menuBar|}}
+      {{ember-theater/menu-bar/rewind theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
+      {{ember-theater/menu-bar/save theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
+      {{ember-theater/menu-bar/load theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
+      {{ember-theater/menu-bar/reset theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
+      {{ember-theater/menu-bar/resize theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
+    {{/ember-theater/menu-bar}}
   {{/ember-theater}}
-</div> --}}
+</div>
